package eu.telecomnancy.rpg.command;

public interface Command {
    void execute();
}
